fix: slight alignment fixes and font changes

--- a/index.scss
+++ b/index.scss
@@ -37,7 +37,7 @@ pre {
 .forms-line-names {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: center;
 }
 .forms-line-names input, .forms-line-names select, .forms-line-names label {
   margin:5px 0;
@@ -57,6 +57,7 @@ pre {
 .form-headers.checkbox {
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: relative;
 }
 .form-headers.checkbox input[type=checkbox]{
@@ -168,7 +169,7 @@ select {
   border-radius: 5px;
   margin-top: 2px;
   margin-bottom: 2px;
-  font-weight: 600;
+  font-weight: 400;
   &:hover {
     cursor: pointer;
   }
@@ -177,10 +178,11 @@ select {
   background-color: rgb(209 209 209);
   color: #fff;
   font-weight: 600;
-  padding: 5px;
-  width: 40px;
+  padding: 8px;
+  width: 30px;
   border-radius: 50%;
-  height: 40px;
+  height: 30px;
+  margin-top: 25px;
 }
 
 .button2 {
@@ -190,7 +192,7 @@ select {
   border-radius: 5px;
   margin-top: 2px;
   font-size: 17px;
-  font-weight: 600;
+  font-weight: 400;
   margin-bottom: 2px;
   color: #008de4;
   &:hover {
@@ -217,7 +219,7 @@ select {
   margin-top: 2px;
   margin-bottom: 2px;
   font-size: 19px;
-  font-weight: 600;
+  font-weight: 400;
   &:hover {
     cursor: pointer;
   }
@@ -227,7 +229,7 @@ button.button.property {
   font-size: 17px;
   background: rgba(0, 141, 228, 0.08);
   color: #008de4;
-  font-weight: 600;
+  font-weight: 400;
 }
 button.button.property span {
   color: #fff;
@@ -241,7 +243,7 @@ button.button.remove-text {
   background: rgba(232, 92, 74, 0.1);
   color: rgba(232, 92, 74, 1);
   font-size: 17px;
-  font-weight: 600;
+  font-weight: 400;
   width: 100%;
 }
 
@@ -253,6 +255,7 @@ button.button.remove-text {
 .toggle-label {
   width: 50px;
   height: 30px;
+  line-height: 30px; 
   background: #ededed;
   position: relative;
   display: inline-block;
@@ -296,6 +299,7 @@ button.button.remove-text {
   }
 
 .checkbox-block{
+  margin-top: 5px;
   position: relative;
   width: 75px;
 }
@@ -304,7 +308,7 @@ button.button.remove-text {
   background-color: #fff;
   border-radius: 5px;
   width: 80px;
-  color: rgb(151 151 151);
+  color: rgb(175 175 175);
   font-size: 16px;
   font-weight: 600;
   &:hover {
@@ -312,16 +316,28 @@ button.button.remove-text {
   }
 }
 span.clear {
-  background: rgb(151, 151, 151);
+  background: rgb(209 209 209);
   color: #fff;
+  font-weight: 600;
+  font-size: 13px;
   margin-right: 7px;
   border-radius: 50%;
-  padding: 2px 6px;
+  padding: 7px 10px;
 }
 .input-container {
   background-color: #fff;
   padding: 40px;
   border-radius: 30px;
+}
+.remove-text-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.add-index {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .output-container {
@@ -555,7 +571,7 @@ $body-color: #008de4;
   button {
     padding: 10px 20px;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 400;
     background-color: $body-color;
     color: #fff;
     border: none;
